ready for first deploy

--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@ APP_ENV=local
 APP_KEY=base64:Vul7Z/7jb+Dz9gx/ttZ2bTrVWplIVweHThRCse0lYJU=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://screenbook.ng
+APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=eu-cdbr-azure-west-b.cloudapp.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=screenbookdb
-DB_USERNAME=b1e9d74577a2e0
-DB_PASSWORD=b103677c
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
